Sorcery authentication complete

--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -4,8 +4,10 @@
 	<% @tags.each do |tag| %>
 		<li>
 			<%= link_to tag.name, tag_path(tag) %>
-			<%= link_to "delete", tag_path(tag), method: :delete,
-	data: {confirm: "Really delete the tag?"} %>
+			<% if logged_in? %>
+				<%= link_to "delete", tag_path(tag), method: :delete,
+					data: {confirm: "Really delete the tag?"} %>
+			<% end %>
 		</li>
 	<% end %>
 </ul>
